Prevent scrolling when pokemon's info is visible

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -15,6 +15,10 @@ body {
 	@include mq(md) {
 		padding-left: $sidebar-width;
 	}
+
+	&.no-scroll {
+		overflow-y: hidden;
+	}
 }
 
 a {
